--- a/shoppingCart-ckeckout.html
+++ b/shoppingCart-ckeckout.html
@@ -99,9 +99,9 @@
                     </table>
                 </div>
             </div>
-            <form class="row g-3 p-3 needs-validation " novalidate>
+            <form class="row g-3 p-3 needs-validation " action="shoppingCart-finshed.html" novalidate>
                 <div class="col-12">
-                    <input class="form-control text-center" type="text" id="" disabled placeholder="訂購人資訊">
+                    <h2 class="text-center">訂購人資訊</h2>
                 </div>
                 <div class="col-md-6">
                     <label for="inputname" class="form-label">姓名</label>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="col-md">
                     <label for="inputZip" class="form-label">郵遞區號</label>
-                    <input type="text" class="form-control" id="inputZip" required>
+                    <input type="number" class="form-control" id="inputZip" required>
                 </div>
                 <div class="col-12">
                     <label for="inputAddress" class="form-label">Address</label>
