--- a/shoppingCart-product.html
+++ b/shoppingCart-product.html
@@ -79,7 +79,7 @@
     </nav>
     <div class="row">
       <div class="col-md-4">
-        <div class="sticky-top" style="top: 10px;">
+        <div class="sticky-top" style="z-index: 10;">
           <h2>紅絲絨冰淇淋</h2>
         <div class="d-flex justify-content-end align-items-end">
           <span class="text-muted">售價 $130</span>
@@ -115,7 +115,7 @@
           叮叮噹~叮叮噹~時序進入聖誕佳節，COLD
           STONE今年特別顛覆以往，以「時尚玩色」x「爆濃系味蕾」為概念發想，自11月5日(五)推出2款新品，首推「耶誕紅絲絨」經典冰淇淋，如紅寶石般的色澤十分誘人，每到聖誕節必吃紅絲絨蛋糕居然變成冰淇淋！嚴選濃郁香醇的紅絲絨冰淇淋，完美揉合可可香氣，拌入酸甜草莓與巧克力醬，搭配酥脆外殼裹著鬆軟內餡的義大利白雪餅乾完美打造女王般氣勢的耶誕必吃款。
         </p>
-        <img src="https://www.coldstone.com.tw/upload/product/IC067.jpg" alt="">
+        <img src="https://www.coldstone.com.tw/upload/product/IC067.jpg" alt=""  class="img-fluid">
         
         
       </div>
